# zhac-main-core

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  ONBOARDING.md  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.prod.defaults
components/ezsp_backend/: CMakeLists.txt  README.md  ezsp_backend.cpp
components/ezsp_backend/include/: ezsp_backend.h
components/ezsp_driver/: CMakeLists.txt  Kconfig  README.md  ezsp_driver.cpp
components/ezsp_driver/include/: ezsp_driver.h
components/hap_slave/: CMakeLists.txt  README.md  hap_slave.cpp
components/hap_slave/include/: hap_slave.h
components/lua_cjson/: CMakeLists.txt
components/lua_cjson/src/: lua_cjson.c
components/lua_engine/: CMakeLists.txt  Kconfig  README.md
components/lua_engine/include/: lua_engine.h  lua_engine_scripts.h
components/lua_engine/src/: lua_alloc.c  lua_alloc.h  lua_engine.c  lua_engine_event_bridge.cpp  lua_engine_rules_hook.cpp  lua_internal.h  lua_require.c  lua_sandbox.c  lua_scheduler.cpp  lua_scheduler.h  lua_script_cache.cpp  zhac_lua_module.cpp
components/zigbee_backend/: CMakeLists.txt  README.md  zigbee_backend.cpp
components/zigbee_backend/include/: zigbee_backend.h
docs/: INSTALL_CODES_PLAN.md  LUA_API.md  esp32_p4_gpio_allocation.md
main/: CMakeLists.txt  Kconfig.projbuild  hap_dispatch.cpp  hap_dispatch.h  idf_component.yml  main.cpp  p4_ota.cpp  p4_ota.h  test_hap_throughput.cpp
